# docs/swagger.json
@@ -70,8 +70,8 @@
                 }
             }
         },
-        "/user/deleteUser": {
-            "post": {
+        "/user/deleteUser/{id}": {
+            "delete": {
                 "tags": [
                     "用户模块"
                 ],
@@ -81,7 +81,7 @@
                         "type": "string",
                         "description": "id",
                         "name": "id",
-                        "in": "formData",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -120,12 +120,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id",
-                        "name": "id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "用户名",
                         "name": "name",
                         "in": "query"
@@ -153,8 +147,8 @@
                 }
             }
         },
-        "/user/updateUser": {
-            "post": {
+        "/user/updateUser/{id}": {
+            "put": {
                 "tags": [
                     "用户模块"
                 ],
@@ -164,7 +158,7 @@
                         "type": "string",
                         "description": "id",
                         "name": "id",
-                        "in": "formData",
+                        "in": "path",
                         "required": true
                     },
                     {
