# router/router.go
@@ -13,8 +13,8 @@ func Router() *gin.Engine {
 	r.GET("/user/getUserList", service.GetUserList)
 	r.GET("/user/getUserOnly", service.GetUserOnly)
 	r.POST("/user/createUser", service.CreateUser)
-	r.POST("/user/deleteUser", service.DeleteUser)
-	r.POST("/user/updateUser", service.UpdateUser)
+	r.DELETE("/user/deleteUser/:id", service.DeleteUser)
+	r.PUT("/user/updateUser/:id", service.UpdateUser)
 	r.POST("/user/userLogin", service.UserLogin)
 	return r
 }
