# service/user.go
@@ -52,7 +52,6 @@ func UserLogin(c *gin.Context) {
 // GetUserOnly
 // @Summary 获取单一用户
 // @Tags 用户模块
-// @param id query string false "id"
 // @param name query string false "用户名"
 // @param phone query string false "手机号码"
 // @param email query string false "邮箱"
@@ -60,18 +59,6 @@ func UserLogin(c *gin.Context) {
 // @Router /user/getUserOnly [get]
 func GetUserOnly(c *gin.Context) {
 	user := db.UserBasic{}
-	if c.Query("id") != "" {
-		id, err := strconv.Atoi(c.Query("id"))
-		if err != nil {
-			c.JSON(500, gin.H{
-				"code": -1,
-				"data": nil,
-				"msg":  "Server error",
-			})
-			return
-		}
-		user.ID = uint(id)
-	}
 	user.Phone = c.Query("phone")
 	user.Name = c.Query("name")
 	user.Email = c.Query("email")
@@ -138,12 +125,12 @@ func CreateUser(c *gin.Context) {
 // DeleteUser
 // @Summary 删除用户
 // @Tags 用户模块
-// @param id formData string true "id"
+// @param id path string true "id"
 // @Success 200 {string} json "{"code","data", "msg"}"
-// @Router /user/deleteUser [post]
+// @Router /user/deleteUser/{id} [delete]
 func DeleteUser(c *gin.Context) {
 	user := db.UserBasic{}
-	id, err := strconv.Atoi(c.PostForm("id"))
+	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		c.JSON(500, gin.H{
 			"code": -1,
@@ -172,16 +159,16 @@ func DeleteUser(c *gin.Context) {
 // UpdateUser
 // @Summary 更新用户
 // @Tags 用户模块
-// @param id formData string true "id"
+// @param id path string true "id"
 // @param name formData string false "用户名"
 // @param password formData string false "密码"
 // @param phone formData string false "手机号码"
 // @param email formData string false "邮箱"
 // @Success 200 {string} json "{"code","data", "msg"}"
-// @Router /user/updateUser [post]
+// @Router /user/updateUser/{id} [put]
 func UpdateUser(c *gin.Context) {
 	user := db.UserBasic{}
-	id, err := strconv.Atoi(c.PostForm("id"))
+	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		c.JSON(500, gin.H{
 			"code": -1,
@@ -196,7 +183,6 @@ func UpdateUser(c *gin.Context) {
 	user.Name = c.PostForm("name")
 	user.Email = c.PostForm("email")
 	_, err = govalidator.ValidateStruct(user)
-	fmt.Println(err)
 	if err != nil {
 		c.JSON(200, gin.H{
 			"code": 1,
